Utilisation des directives

--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -3,6 +3,7 @@
     <p>Mise en ligne le {{ faceSnap.createdDate }}</p>
     <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
     <p>{{ faceSnap.description }}</p>
+    <p *ngIf="faceSnap.location"> Photo prise a {{ faceSnap.location}}</p>
     <p><button (click)="onSnap()">{{ buttonText }}</button>
         👍 {{ faceSnap.snaps }}</p>
 </div>
