decouverte des directives des pipes et des services

--- a/snapface/src/app/face-snap/face-snap.component.html
+++ b/snapface/src/app/face-snap/face-snap.component.html
@@ -1,9 +1,8 @@
-<div class="face-snap-card">
-    <h2>{{ faceSnap.title }}</h2>
-    <p>Mise en ligne le {{ faceSnap.createdDate }}</p>
-    <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
+<div class="face-snap-card" [ngClass]="{snapped: buttonText==='Oops, un Snap'}">
+    <h2>{{ faceSnap.title  | titlecase }}</h2>
+    <p>Mis en ligne {{ faceSnap.createdDate | date: 'à HH:mm, le d MMMM yyyy' }}</p>    <img [src]="faceSnap.imageUrl" [alt]="faceSnap.title">
     <p>{{ faceSnap.description }}</p>
     <p *ngIf="faceSnap.location"> Photo prise a {{ faceSnap.location}}</p>
     <p><button (click)="onSnap()">{{ buttonText }}</button>
-        👍 {{ faceSnap.snaps }}</p>
+        <span [ngStyle]="{color: 'rgb(0,' + faceSnap.snaps +' ,0)'}"><p> 👍 {{ faceSnap.snaps }}</p></span>   
 </div>
